<resources>
    <string name="app_name">AndroidRATProject</string>
    <string name="title_activity_toy_vpn_client">ToyVpnClient</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="connect">Connect!</string>
    <string name="disconnect">Disconnect!</string>
    <string name="connecting">ToyVPN is connecting...</string>
    <string name="connected">ToyVPN is connected!</string>
    <string name="disconnected">ToyVPN is disconnected!</string>
</resources>
