<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.breeder1.androidratproject.ToyVpnClient"
    tools:showIn="@layout/activity_toy_vpn_client">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3mm">
            <TextView style="@style/item" android:text="@string/address"/>
            <EditText style="@style/item" android:id="@+id/address"/>
            <TextView style="@style/item" android:text="@string/port"/>
            <EditText style="@style/item" android:id="@+id/port" android:inputType="number"/>
            <TextView style="@style/item" android:text="@string/secret"/>
            <EditText style="@style/item" android:id="@+id/secret" android:password="true"/>
            <Button style="@style/item" android:id="@+id/connect" android:text="@string/connect"/>
            <Button style="@style/item" android:id="@+id/disconnect" android:text="@string/disconnect"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
